--- a/my.cnf
+++ b/my.cnf
@@ -4,6 +4,8 @@ character-set-server=utf8mb4
 collation-server=utf8mb4_unicode_ci
 init-connect='SET NAMES utf8mb4'
 skip-character-set-client-handshake
+explicit_defaults_for_timestamp = 1
+default-time-zone = '+09:00'
 
 [client]
 default-character-set=utf8mb4
