--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,21 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
+    fastcgi_connect_timeout 300;
+    fastcgi_send_timeout 300;
+    fastcgi_read_timeout 300;
+    fastcgi_buffer_size 32k;
+    fastcgi_buffers 16 16k;
+    fastcgi_busy_buffers_size 128k;
+    fastcgi_temp_file_write_size 128k;
+    fastcgi_intercept_errors on;
+
+    client_max_body_size 10M;
+
+    # Gzip 압축 활성화
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
     server {
         listen 80;
         server_name localhost;
