--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./html:/var/www/html
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./html:/var/www/html:cached
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - php
 
@@ -19,16 +19,19 @@ services:
       - ./html:/var/www/html
     working_dir: /var/www/html
     environment:
-      - MYSQL_HOSTNAME=${MYSQL_HOSTNAME}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - DB_HOST=${MYSQL_HOSTNAME}
+      - DB_DATABASE=${MYSQL_DATABASE}
+      - DB_USERNAME=${MYSQL_USER}
+      - DB_PASSWORD=${MYSQL_PASSWORD}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI}
 
   mysql:
     container_name: mysql_${COMPOSE_PROJECT_NAME}
     image: mysql:5.7
     ports:
-      - "33061:3306"
+      - "${MYSQL_PORT}:3306"
     volumes:
       - ./data/mysql:/var/lib/mysql
       - ./my.cnf:/etc/mysql/conf.d/my.cnf
@@ -37,4 +40,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_CHARSET: utf8mb4
+      MYSQL_COLLATION: utf8mb4_unicode_ci
+      TZ: Asia/Seoul
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
