로그인 수정
구글 로그인 기능 수정

--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,13 @@
 COMPOSE_PROJECT_NAME=project_name
 
 # MySQL 설정
-MYSQL_HOSTNAME=mysql_${COMPOSE_PROJECT_NAME}
+MYSQL_HOSTNAME=your_hostname
+MYSQL_PORT=your_port
 MYSQL_ROOT_PASSWORD=your_root_password
 MYSQL_DATABASE=your_database_name
 MYSQL_USER=your_username
 MYSQL_PASSWORD=your_password 
+
+# 사용자 UID/GID 설정
+USER_ID=1000
+GROUP_ID=1000
