--- a/html/.env.sample
+++ b/html/.env.sample
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=your_app_name
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=your_app_url
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=your_hostname
+DB_PORT=your_port
+DB_DATABASE=your_database
+DB_USERNAME=your_username
+DB_PASSWORD=your_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -36,6 +36,10 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=${APP_URL}/auth/google/callback
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
