웹 포트 설정 변경

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,9 @@
 # Docker Compose 프로젝트 이름 설정
 COMPOSE_PROJECT_NAME=project_name
 
+# 웹서버 설정
+WEB_PORT=8080
+
 # MySQL 설정
 MYSQL_HOSTNAME=your_hostname
 MYSQL_PORT=your_port
